--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,8 +1,11 @@
+<!-- 商品一覧画面 -->
 <div class="contener my-3">
   <div class="row">
     <div class="col-9 mx-auto">
       <h4>商品一覧</h4>
-      <div class="text-right"><%= link_to '＋商品新規登録', new_admin_item_path %></div>
+      <div class="text-right h5">
+        <%= link_to '＋商品新規登録', new_admin_item_path, class: "text-white btn btn-success btn100" %>
+      </div>
       <table class="table">
         <thead>
           <tr>
@@ -35,9 +38,9 @@
               </td>
             </tr>
           <% end %>
-          <%= paginate @items %>
         </tbody>
       </table>
+      <div><%= paginate @items %></div>
     </div>
   </div>
 </div>
