--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,8 +1,11 @@
+<!-- 商品新規登録画面 -->
 <div class='container'>
   <div class='row'>
     <div class="col-11">
       <h4 class="row offset-1 my-5">商品新規登録</h4>
       <%= form_with model:@item, url: admin_items_path, local: true do |f| %>
+        <%= render 'layouts/error_messages', model: f.object %>
+
         <div class="row form-group">
           <%= f.label :商品画像, class: "offset-2 col-3" %>
           <%= f.attachment_field :image %>
@@ -30,12 +33,12 @@
 
         <div class="row form-group">
           <%= f.label :販売ステータス, class: "offset-2 col-3"  %>
-          <%= f.radio_button :is_sold, true %> 販売中
-          <%= f.radio_button :is_sold, false, class: "offset-1" %> 販売停止
+          <label><%= f.radio_button :is_sold, true %> 販売中</label>
+          <label><%= f.radio_button :is_sold, false, class: "ml-3" %> 販売停止</label>
         </div>
 
         <div class="form-group">
-          <%= f.submit "新規登録", class: 'btn btn-success offset-5' %>
+          <%= f.submit "新規登録", class: 'btn btn-success btn100 offset-5' %>
         </div>
       <% end %>
     </div>
