--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -8,6 +8,8 @@
         <h3 class="my-2 py-2 d-inline-block border-bottom border-dark text-center" style="font-weight: 600; width: 100%;">注文情報入力</h3>
       </div>
     </div>
+    <!--注文ステップ-->
+    <%= render 'public/cart_items/order_process' %>
     <div class="col-md-12 offset-md-1">
       <div class="row mt-4">
         <h4><b>お支払い方法</b></h4>
