--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -22,7 +22,7 @@
         </tr>
         <tr>
           <td>税込価格(税抜価格)</td>
-          <td><%= @item.with_tax_price %> (<%= @item.price_without_tax%>)</td>
+          <td><%= @item.with_tax_price.to_s(:delimited) %> (<%= @item.price_without_tax.to_s(:delimited)%>)</td>
         </tr>
         <tr>
           <td>販売ステータス</td>
