--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,8 +1,6 @@
 
 <div class="container">
-    <div class = "flash_message text-center text-success">
-      <%= flash[:notice] %>
-    </div>
+    <div class = "flash_message text-center text-danger"><%= flash[:danger] %></div>
     <div class="row">
       <div class="mx-auto col-11">
         <h3 class="my-2 py-2 d-inline-block border-bottom border-dark text-center" style="font-weight: 600; width: 100%;">注文情報入力</h3>
