[Update] signup README

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -28,7 +28,7 @@
 
         <div class="row form-group">
           <%= f.label :税抜価格, class: "offset-2 col-3" %>
-          <%= f.text_field :price_without_tax, placeholder:"1000", class: 'form-control col-4' %>
+          <%= f.text_field :price_without_tax, placeholder:"1000", class: 'form-control col-4' %><span class="mt-2">円</span>
         </div>
 
         <div class="row form-group">
