--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -5,7 +5,7 @@
       <h4 class="row offset-1 my-5">商品編集</h4>
       <%= form_with model:@item, url: admin_item_path, local: true do |f| %>
         <%= render 'layouts/error_messages', model: f.object %>
-        
+
         <div class="row form-group">
           <%= f.label :商品画像, class: "offset-2 col-3" %>
           <%= f.attachment_field :image %>
@@ -28,7 +28,7 @@
 
         <div class="row form-group">
           <%= f.label :税抜価格, class: "offset-2 col-3" %>
-          <%= f.text_field :price_without_tax, placeholder:"1000", class: 'form-control col-4' %>
+          <%= f.text_field :price_without_tax, placeholder:"1000", class: 'form-control col-4' %><span class="mt-2">円</span>
         </div>
 
         <div class="row form-group">
