--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -35,34 +35,34 @@
     <div class = "mx-auto row">
       <table class = "table table-bordered">
         <thead>
-          <tr class="table-secondary">
-            <th>商品名</th>
-            <th>単価（税込）</th>
-            <th>数量</th>
-            <th>小計</th>
-            <th></th>
+          <tr class="table-active">
+            <th class = "border border-dark">商品名</th>
+            <th class = "border border-dark">単価（税込）</th>
+            <th class = "border border-dark">数量</th>
+            <th class = "border border-dark">小計</th>
+            <th class = "border border-dark"></th>
           </tr>
         </thead>
         <tbody>
           <% @my_cart_items.each do |cart_item| %>
             <tr>
-              <td class="align-middle">
+              <td class="align-middle border border-dark">
                   <%= attachment_image_tag cart_item.item, :image, :fill, 50, 50, resize:"50×50", :size => '50×50' %>
                   <%= link_to cart_item.item.name, public_item_path(cart_item.item_id), class: "text-dark" %>
               </td>
-              <td class="align-middle">
+              <td class="align-middle border border-dark">
                 <%= "￥#{cart_item.item.with_tax_price.to_s(:delimited)}" %>
               </td>
-              <td class="align-middle">
+              <td class="align-middle  border border-dark">
                 <%= form_with model: cart_item, url: public_cart_item_path(cart_item) do |f| %>
                   <%= f.select :count, *[1..20] %>
                   <%= f.submit '変更', class: "btn btn-success" %>
                 <% end %>
               </td>
-              <td class="align-middle">
+              <td class="align-middle  border border-dark">
                 <%= "￥#{cart_item.subtotal_price.to_s(:delimited)}" %>
               </td>
-              <td class="align-middle">
+              <td class="align-middle  border border-dark">
                 <%= link_to public_cart_item_path(cart_item), method: :delete, data: {confirm: "カートから削除しますか？"} do %>
                   <button type="button" class="btn btn-danger">削除する</button>
                 <% end %>
@@ -75,15 +75,15 @@
     <!--買い物を続けるボタン　と　合計金額-->
     <div class = "mx-auto row">
       <div class = "mx-auto col-8">
-        <%= link_to public_items_path do %>
+        <%= link_to root_path do %>
           <button type="button" class="btn btn-info btn-lg">買い物を続ける</button>
         <% end %>
       </div>
       <div class = "mx-auto col-4">
         <table class = "table table-bordered">
-          <tr>
-            <th class="table-secondary">合計金額</th>
-            <th>￥<%= @my_cart_items.inject(0){|sum, cart| sum + cart.subtotal_price}.to_s(:delimited) %></th>
+          <tr style = "border: double;">
+            <th class="table-active border border-dark">合計金額</th>
+            <th class = "border border-dark">￥<%= @my_cart_items.inject(0){|sum, cart| sum + cart.subtotal_price}.to_s(:delimited) %></th>
           </tr>
         </table>
       </div>
